# db-app

./: CMakeLists.txt
LibraryTxt/: Books.txt  Customers.txt  DBTables.txt  OrderDetails.txt  Orders.txt  Products.txt  Students.txt  TableRelations.txt  TestTable.txt
LibraryTxt/useless/: Abonements.txt  Students.txt
initial files/: DBLib.h  DBTableBinKB.cpp  DBTableSetKB.cpp  main.cpp
project/include/: exceptions.h  income.h  mcustomers.h  service.h  test.h  utils.h  utils.hpp
project/src/: date.cpp  dbvalue.cpp  income.cpp  main.cpp  maincustomer.cpp  service.cpp  tabletxt.cpp  test.cpp
